--- a/.github/workflows/Ios.yml
+++ b/.github/workflows/Ios.yml
@@ -1,84 +1,66 @@
-name: iOS CI – JunoNative
+name: Build & Archive iOS App
 
 on:
   push:
     branches: [ main ]
-    tags:
-      - "ios-v*"
   workflow_dispatch:
 
 jobs:
-  ios:
-    name: Build & Archive iOS App
-    runs-on: macos-14
-
-    timeout-minutes: 90
+  build-ios:
+    runs-on: macos-14-arm64
 
     env:
       CI: true
-      RCT_NEW_ARCH_ENABLED: "1"
-
-      # --- App identifiers ---
+      RCT_NEW_ARCH_ENABLED: 1
       APP_IDENTIFIER: ${{ secrets.APP_IDENTIFIER }}
       APPLE_TEAM_ID: ${{ secrets.APPLE_TEAM_ID }}
-
-      # --- Signing ---
       IOS_DIST_CERT_BASE64: ${{ secrets.IOS_DIST_CERT_BASE64 }}
       IOS_DIST_CERT_PASSWORD: ${{ secrets.IOS_DIST_CERT_PASSWORD }}
       IOS_PROFILE_BASE64: ${{ secrets.IOS_PROFILE_BASE64 }}
 
     steps:
-      # ----------------------------------------------------
-      # 1. Checkout
-      # ----------------------------------------------------
-      - name: 🧾 Checkout repository
+      - name: Checkout
         uses: actions/checkout@v4
         with:
           fetch-depth: 0
 
-      # ----------------------------------------------------
-      # 2. Ruby (Fastlane / CocoaPods)
-      # ----------------------------------------------------
-      - name: 💎 Setup Ruby
+      # -------------------------
+      # Ruby / Fastlane
+      # -------------------------
+      - name: Setup Ruby
         uses: ruby/setup-ruby@v1
         with:
-          ruby-version: "3.3"
+          ruby-version: 3.3
           bundler-cache: true
 
-      # ----------------------------------------------------
-      # 3. Node (React Native)
-      # ----------------------------------------------------
-      - name: 🟢 Setup Node
+      # -------------------------
+      # Node + Corepack (CRITICAL)
+      # -------------------------
+      - name: Setup Node
         uses: actions/setup-node@v4
         with:
-          node-version: "22"
-          cache: "yarn"
+          node-version: 22
+          cache: yarn
 
-      - name: 📦 Install JS dependencies
+      - name: Enable Corepack
         run: |
-          yarn install --frozen-lockfile
+          corepack enable
+          corepack prepare yarn@11.4.2 --activate
+          yarn --version
 
-      # ----------------------------------------------------
-      # 4. CocoaPods
-      # ----------------------------------------------------
-      - name: 🧩 Install CocoaPods dependencies
-        working-directory: ios
+      - name: Install JS dependencies
         run: |
-          bundle exec pod install --repo-update
+          yarn install --immutable
 
-      # ----------------------------------------------------
-      # 5. Fastlane – Full CI pipeline
-      # ----------------------------------------------------
-      - name: 🚀 Run Fastlane iOS CI
+      # -------------------------
+      # iOS build via Fastlane
+      # -------------------------
+      - name: Build iOS
         run: |
           bundle exec fastlane ios ios_ci
 
-      # ----------------------------------------------------
-      # 6. Upload IPA Artifact
-      # ----------------------------------------------------
-      - name: 📤 Upload IPA
+      - name: Upload IPA
         uses: actions/upload-artifact@v4
         with:
-          name: JunoNative-IPA
-          path: fastlane/build/ios/export/*.ipa
-          if-no-files-found: error
+          name: JunoNative-ipa
+          path: fastlane/build/ios/*.ipa
