--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "JunoNativeIOS",
   "version": "0.1.0",
   "private": true,
-  "packageManager": "npm@1.22.22",
+  "packageManager": "yarn@1.22.22",
   "engines": {
     "node": ">=18",
     "npm": ">=11.4.2"
