--- a/.github/workflows/ios_manual_deploy.yml
+++ b/.github/workflows/ios_manual_deploy.yml
@@ -14,7 +14,6 @@ jobs:
       IOS_DIST_CERT_BASE64: ${{ secrets.IOS_DIST_CERT_BASE64 }}
       IOS_DIST_CERT_PASSWORD: ${{ secrets.IOS_DIST_CERT_PASSWORD }}
       IOS_PROFILE_BASE64: ${{ secrets.IOS_PROFILE_BASE64 }}
-      EXPORT_OPTIONS_PLIST: ${{ secrets.EXPORT_OPTIONS_PLIST }}
       KEYCHAIN_PASSWORD: ${{ secrets.KEYCHAIN_PASSWORD }}
       APP_STORE_CONNECT_API_KEY_ID: ${{ secrets.APP_STORE_CONNECT_API_KEY_ID }}
       APP_STORE_CONNECT_API_ISSUER_ID: ${{ secrets.APP_STORE_CONNECT_API_ISSUER_ID }}
@@ -33,18 +32,43 @@ jobs:
 
       - name: Install JavaScript and iOS dependencies
         run: |
+          set -euo pipefail
           corepack enable
           yarn install --frozen-lockfile || npm ci
           cd ios && pod install
 
       - name: Decode signing assets and create keychain
+        shell: bash
         run: |
+          set -euo pipefail
+
           CERT_PATH="$RUNNER_TEMP/dist.p12"
           PROFILE_PATH="$RUNNER_TEMP/profile.mobileprovision"
           KEYCHAIN_PATH="$RUNNER_TEMP/app-signing.keychain-db"
 
-          echo -n "$IOS_DIST_CERT_BASE64" | base64 --decode -o "$CERT_PATH"
-          echo -n "$IOS_PROFILE_BASE64" | base64 --decode -o "$PROFILE_PATH"
+          if [[ -z "${IOS_DIST_CERT_BASE64:-}" ]]; then
+            echo "::error::IOS_DIST_CERT_BASE64 secret is empty"
+            exit 1
+          fi
+          if [[ -z "${IOS_PROFILE_BASE64:-}" ]]; then
+            echo "::error::IOS_PROFILE_BASE64 secret is empty"
+            exit 1
+          fi
+          if [[ -z "${KEYCHAIN_PASSWORD:-}" ]]; then
+            echo "::error::KEYCHAIN_PASSWORD secret is empty"
+            exit 1
+          fi
+          if [[ -z "${IOS_DIST_CERT_PASSWORD:-}" ]]; then
+            echo "::error::IOS_DIST_CERT_PASSWORD secret is empty"
+            exit 1
+          fi
+
+          # base64 decode (GNU and BSD variants)
+          echo -n "$IOS_DIST_CERT_BASE64" | base64 --decode > "$CERT_PATH" 2>/dev/null || \
+          echo -n "$IOS_DIST_CERT_BASE64" | base64 -D > "$CERT_PATH"
+
+          echo -n "$IOS_PROFILE_BASE64" | base64 --decode > "$PROFILE_PATH" 2>/dev/null || \
+          echo -n "$IOS_PROFILE_BASE64" | base64 -D > "$PROFILE_PATH"
 
           security create-keychain -p "$KEYCHAIN_PASSWORD" "$KEYCHAIN_PATH"
           security set-keychain-settings -lut 21600 "$KEYCHAIN_PATH"
@@ -53,8 +77,65 @@ jobs:
           security import "$CERT_PATH" -P "$IOS_DIST_CERT_PASSWORD" -A -t cert -f pkcs12 -k "$KEYCHAIN_PATH"
           security list-keychain -d user -s "$KEYCHAIN_PATH"
 
-          mkdir -p ~/Library/MobileDevice/Provisioning\ Profiles
-          cp "$PROFILE_PATH" ~/Library/MobileDevice/Provisioning\ Profiles
+          # Allow codesign to access the key without UI prompts
+          security set-key-partition-list -S apple-tool:,apple: -s -k "$KEYCHAIN_PASSWORD" "$KEYCHAIN_PATH"
+
+      - name: Install provisioning profile (extract name/uuid)
+        shell: bash
+        run: |
+          set -euo pipefail
+
+          PROFILE_PATH="$RUNNER_TEMP/profile.mobileprovision"
+          PROFILE_PLIST="$RUNNER_TEMP/profile.plist"
+
+          security cms -D -i "$PROFILE_PATH" > "$PROFILE_PLIST"
+
+          PROFILE_UUID=$(/usr/libexec/PlistBuddy -c 'Print :UUID' "$PROFILE_PLIST")
+          PROFILE_NAME=$(/usr/libexec/PlistBuddy -c 'Print :Name' "$PROFILE_PLIST")
+
+          mkdir -p "$HOME/Library/MobileDevice/Provisioning Profiles"
+          cp "$PROFILE_PATH" "$HOME/Library/MobileDevice/Provisioning Profiles/$PROFILE_UUID.mobileprovision"
+
+          echo "PROFILE_NAME=$PROFILE_NAME" >> "$GITHUB_ENV"
+          echo "::notice::Installed provisioning profile: $PROFILE_NAME ($PROFILE_UUID)"
+
+      - name: Create ExportOptions.plist
+        shell: bash
+        run: |
+          set -euo pipefail
+
+          EXPORT_PLIST="$RUNNER_TEMP/ExportOptions.plist"
+
+          if [[ -z "${APPLE_TEAM_ID:-}" || -z "${APP_IDENTIFIER:-}" || -z "${PROFILE_NAME:-}" ]]; then
+            echo "::error::Missing APPLE_TEAM_ID / APP_IDENTIFIER / PROFILE_NAME"
+            exit 1
+          fi
+
+          cat > "$EXPORT_PLIST" <<PLIST
+<?xml version="1.0" encoding="UTF-8"?>
+<!DOCTYPE plist PUBLIC "-//Apple//DTD PLIST 1.0//EN" "http://www.apple.com/DTDs/PropertyList-1.0.dtd">
+<plist version="1.0">
+<dict>
+  <key>method</key>
+  <string>app-store</string>
+
+  <key>teamID</key>
+  <string>${APPLE_TEAM_ID}</string>
+
+  <key>signingStyle</key>
+  <string>manual</string>
+
+  <key>provisioningProfiles</key>
+  <dict>
+    <key>${APP_IDENTIFIER}</key>
+    <string>${PROFILE_NAME}</string>
+  </dict>
+</dict>
+</plist>
+PLIST
+
+          plutil -lint "$EXPORT_PLIST"
+          echo "::notice::ExportOptions.plist ready at $EXPORT_PLIST"
 
       - name: Ensure XcodeGen source dir exists
         shell: bash
@@ -65,13 +146,14 @@ jobs:
             cp -R "ios/JunoNative" "ios/JunoNativeApp"
           fi
           ls -la ios
-      
+
       - name: Generate Xcode project
         run: |
           xcodegen generate --spec ios/JunoNativeApp.yml
 
       - name: Build archive
         run: |
+          set -euo pipefail
           ARCHIVE_PATH="$RUNNER_TEMP/JunoNative.xcarchive"
           xcodebuild -workspace ios/JunoNative.xcworkspace \
                      -scheme JunoNative \
@@ -83,17 +165,29 @@ jobs:
 
       - name: Export IPA
         run: |
+          set -euo pipefail
           EXPORT_PLIST="$RUNNER_TEMP/ExportOptions.plist"
-          echo -n "$EXPORT_OPTIONS_PLIST" | base64 --decode -o "$EXPORT_PLIST"
           xcodebuild -exportArchive -archivePath "$RUNNER_TEMP/JunoNative.xcarchive" \
                      -exportOptionsPlist "$EXPORT_PLIST" \
                      -exportPath "$RUNNER_TEMP/build"
 
       - name: Upload to TestFlight
         run: |
+          set -euo pipefail
           IPA_PATH=$(find "$RUNNER_TEMP/build" -name "*.ipa" | head -n 1)
+          if [[ -z "${IPA_PATH:-}" || ! -f "$IPA_PATH" ]]; then
+            echo "::error::IPA not found under $RUNNER_TEMP/build"
+            find "$RUNNER_TEMP/build" -maxdepth 3 -type f -print || true
+            exit 1
+          fi
+
           AUTHKEY_PATH="$RUNNER_TEMP/AuthKey_$APP_STORE_CONNECT_API_KEY_ID.p8"
-          echo -n "$APP_STORE_CONNECT_API_KEY_BASE64" | base64 --decode -o "$AUTHKEY_PATH"
+          if [[ -z "${APP_STORE_CONNECT_API_KEY_BASE64:-}" ]]; then
+            echo "::error::APP_STORE_CONNECT_API_KEY_BASE64 secret is empty"
+            exit 1
+          fi
+          echo -n "$APP_STORE_CONNECT_API_KEY_BASE64" | base64 --decode > "$AUTHKEY_PATH" 2>/dev/null || \
+          echo -n "$APP_STORE_CONNECT_API_KEY_BASE64" | base64 -D > "$AUTHKEY_PATH"
 
           xcrun altool --validate-app -f "$IPA_PATH" -t ios \
              --apiKey "$APP_STORE_CONNECT_API_KEY_ID" --apiIssuer "$APP_STORE_CONNECT_API_ISSUER_ID"
